src/parser/snapshots/rbx_rsml__parser__tests__macro_missing_name.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Macro {
        pub_modifier: None,
        declaration: Node {
            token: SpannedToken(
                0,
                MacroDeclaration,
                6,
            ),
            leading_trivia: None,
        },
        name: None,
        args: None,
        return_type: None,
        body: None,
    },
]
